<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1545A4"
    tools:context="com.zys.baiduphoneguard.fragments.FirstHelpFragment">

    <ImageView
        android:id="@+id/iv_bear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/one_key_help_bear" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_bear"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/help_qiujiu"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/help_kuaisu"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_openHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/help_yijian"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>
